# herkos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GLOBAL_COPY_PROP_TICKET.md  PLAN.md  PR_SPLIT_STATUS.md  README.md  bench_history.csv  pyproject.toml  size_history.csv  sparkfile.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/herkos/: Cargo.toml
crates/herkos-core/: Cargo.toml  example_c_usage.c  herkos.h
crates/herkos-core/src/: c_ffi.rs  lib.rs
crates/herkos-core/src/backend/: mod.rs  safe.rs
crates/herkos-core/src/codegen/: constructor.rs  env.rs  export.rs  function.rs  instruction.rs  mod.rs  module.rs  traits.rs  types.rs  utils.rs
crates/herkos-core/src/ir/: lower_phis.rs  mod.rs  types.rs
crates/herkos-core/src/ir/builder/: analysis.rs  assembly.rs  core.rs
crates/herkos-core/src/optimizer/: algebraic.rs  branch_fold.rs  const_prop.rs  copy_prop.rs  dead_blocks.rs  dead_instrs.rs  empty_blocks.rs  gvn.rs  licm.rs  local_cse.rs  merge_blocks.rs  mod.rs  utils.rs
crates/herkos-core/src/parser/: mod.rs
crates/herkos-runtime/: Cargo.toml  KANI.md
crates/herkos-runtime/src/: lib.rs  memory.rs  module.rs  ops.rs  table.rs
crates/herkos-runtime/tests/: generated_modules.rs
crates/herkos-tests/: .gitignore  Cargo.toml  README.md  build.rs
crates/herkos-tests/benches/: herkos_runtime_benchmark.rs
crates/herkos-tests/data/c/: c_e2e_arith.c  c_e2e_i64.c  c_e2e_loops.c  c_e2e_memory.c
crates/herkos-tests/data/rust/: rust_e2e_arith.rs  rust_e2e_control.rs  rust_e2e_heavy_fibo.rs  rust_e2e_i64.rs  rust_e2e_memory_bench.rs
crates/herkos-tests/data/rust/common/: control.rs  fibo.rs  fill_sort_sum.rs  sum_recursive.rs
crates/herkos-tests/data/wat/: abs.wat  add.wat  add_i64.wat  call_helper.wat  call_i64.wat  call_import_transitive.wat  call_with_globals.wat  call_with_memory.wat  const_global.wat  const_i64.wat  const_return.wat  conversions.wat  countdown_loop.wat  counter.wat  data_segments.wat  early_return.wat  f64_ops.wat  factorial.wat  fibonacci.wat  gcd.wat  hello_data.wat  i32_extend16_s.wat  i32_extend8_s.wat  i64_extend16_s.wat  i64_extend32_s.wat  i64_extend8_s.wat  i64_ops.wat  import_basic.wat  import_memory.wat  import_multi.wat  indirect_call.wat  indirect_call_import.wat  locals_aliasing.wat  locals_test.wat  max.wat  memory_fill.wat  memory_grow.wat  memory_init.wat  memory_load.wat  memory_roundtrip.wat  (+10 more)
crates/herkos-tests/src/: lib.rs
crates/herkos-tests/tests/: arithmetic.rs  bulk_memory.rs  c_e2e.rs  c_e2e_i64.rs  c_e2e_loops.rs  c_e2e_memory.rs  call_import_transitive.rs  control_flow.rs  early_return.rs  function_calls.rs  import_memory.rs  import_multi.rs  import_traits.rs  indirect_call_import.rs  indirect_calls.rs  inter_module_lending.rs  locals.rs  locals_aliasing.rs  memory.rs  memory_grow.rs  module_wrapper.rs  numeric_ops.rs  rust_e2e.rs  rust_e2e_control.rs  rust_e2e_heavy_fibo.rs  rust_e2e_i64.rs  rust_e2e_memory_bench.rs  select.rs  subwidth_mem.rs  unreachable.rs
crates/herkos/src/: lib.rs  main.rs  optimizer.rs
crates/herkos/src/backend/: mod.rs  safe.rs
crates/herkos/src/codegen/: constructor.rs  export.rs  function.rs  instruction.rs  mod.rs  module.rs  traits.rs  types.rs
crates/herkos/src/ir/: builder.rs  lower_phis.rs  mod.rs  types.rs
crates/herkos/src/ir/builder/: analysis.rs  assembly.rs  core.rs  mod.rs  translate.rs
crates/herkos/src/optimizer/: algebraic.rs  branch_fold.rs  const_prop.rs  copy_prop.rs  dead_blocks.rs  dead_instrs.rs  empty_blocks.rs  gvn.rs  licm.rs  local_cse.rs  merge_blocks.rs  mod.rs  utils.rs
crates/herkos/src/parser/: mod.rs
crates/herkos/tests/: e2e.rs
docs/: FUTURE.md  GETTING_STARTED.md  Makefile  REQUIREMENTS.md  REQUIREMENTS.rst  SPECIFICATION.md  TRANSPILER_DESIGN.md  WebAssemblyReferenceManual.md  conf.py  index.md  index.rst  metamodel.md  requirements.txt  ubproject.toml
docs/scripts/: generate_all.py  generate_impl_needs.py  generate_test_needs.py  generate_wasm_spec_needs.py  test_links.toml  wasm_1_0_instructions.toml
docs/specification/: architecture.rst  index.rst  integration.rst  module_representation.rst  open_questions.rst  performance.rst  references.rst  security_properties.rst  transpilation_rules.rst
docs/traceability/: coverage.md  coverage.rst  impl.md  impl.rst  index.md  index.rst  metamodel.rst  tests.md  tests.rst
docs/traceability/wasm_spec/: binary.md  execution.md  index.md  index.rst  instructions_numeric.md  instructions_other.md  modules.md  types.md  validation.md
examples/c-fft/: .gitignore  Cargo.toml  README.md  fft.c  run.sh
examples/c-fft/src/: fft_wasm.rs  main.rs
examples/c-to-wasm-to-rust/: .gitignore  Cargo.toml  README.md  fibonacci.c  run.sh
examples/c-to-wasm-to-rust/src/: main.rs
examples/herkos-bootstrap/: Cargo.toml
examples/herkos-bootstrap/src/: lib.rs
examples/inter-module-lending/: .gitignore  Cargo.toml  math_library.wat  run.sh
examples/inter-module-lending/src/: main.rs
scripts/: bench_record.sh  collect_bench.py  collect_size.py  compare_metrics.py  size_record.sh  transpile_diff.py  transpile_diff.sh
