[workspace]
resolver = "2"
members = ["crates/herkos-runtime", "crates/herkos", "crates/herkos-tests"]

exclude = ["examples/c-to-wasm-to-rust", "examples/inter-module-lending"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
wasmparser = "0.227"
wat = "1.220"
kani-verifier = "0.57"
