[package]
name = "herkos-runtime"
version = "0.1.1"
edition = "2021"
description = "Runtime library for herkos transpiled output — IsolatedMemory, WasmTrap, capability traits"
license = "Apache-2.0"
repository = "https://github.com/arnoox/herkos"
homepage = "https://github.com/arnoox/herkos"
readme = "../../README.md"
authors = ["Arnaud Riess"]
keywords = ["webassembly", "wasm", "runtime", "no-std", "isolation"]
categories = ["wasm", "no-std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
alloc = []

[dev-dependencies]
kani-verifier = { workspace = true }
