[package]
name = "herkos-tests"
version = "0.2.0"
edition = "2021"
publish = false
description = "End-to-end compilation tests for herkos transpiler"
license = "Apache-2.0"
authors = ["herkos contributors"]

[dependencies]
herkos-runtime = { path = "../herkos-runtime" }

[build-dependencies]
anyhow = { workspace = true }
wat = { workspace = true }
herkos-core = { version = "0.2.0", path = "../herkos-core" }

[dev-dependencies]
criterion = "0.8.2"

[features]
baseline_benches = []

[[bench]]
name = "herkos_runtime_benchmark"
harness = false
