[package]
name = "herkos"
version = "0.2.0"
edition = "2021"
description = "Compile-Time Memory Isolation via WebAssembly and Rust Transpilation"
license = "Apache-2.0"
repository = "https://github.com/arnoox/herkos"
homepage = "https://github.com/arnoox/herkos"
authors = ["Arnaud Riess"]
keywords = ["webassembly", "wasm", "transpiler", "rust", "isolation"]
categories = ["wasm", "development-tools::build-utils"]
readme = "../../README.md"

[dependencies]
herkos-core = { version = "0.2.0", path = "../herkos-core" }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
